# ClaimScan

./: .dockerignore  .gitignore  Dockerfile  QUICKSTART.md  README.md  __init__.py  inference.py  openenv.yaml  pyproject.toml
claimscan-env/: .gitignore  Dockerfile  README.md  coverage_rules.py  environment.py  fraud_rules.py  inference.py  local_test.py  local_validate.py  models.py  openenv.yaml  payout_calculator.py  priority_rules.py  pyproject.toml  requirements.txt
claimscan-env/graders/: __init__.py  base_grader.py  easy_grader.py  hard_grader.py  medium_grader.py
claimscan-env/server/: __init__.py  app.py
claimscan-env/tasks/: __init__.py  easy_task.json  hard_task.json  medium_task.json
claimscan-env/tests/: test_grader.py  test_rules.py
server/: __init__.py  app.py
