[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claimscan-env"
version = "1.0.0"
description = "Insurance claims processing benchmark with deterministic fraud detection"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "mansha", email = "immansha@example.com"}
]
keywords = ["insurance", "fraud-detection", "claims", "openenv", "benchmark"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
claimscan-server = "server.app:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/immansha/ClaimScan"
Repository = "https://github.com/immansha/ClaimScan.git"
Issues = "https://github.com/immansha/ClaimScan/issues"

[tool.setuptools]
packages = ["claimscan_env"]

[tool.pytest.ini_options]
testpaths = ["claimscan_env/tests"]
python_files = "test_*.py"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
target-version = "py39"
line-length = 100
